# WOMBAT

./: .buildinfo  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylint.ini  .pylintrc  CHANGELOG.md  LICENSE  NOTICE  README.md  README.rst  changelog.html  citation.bib  contributing.html  genindex.html  index.html  install.html  mkdocs.yml  objects.inv  presentations.html  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  team.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: .test_pypi_upload.yaml  ci-tests.yml  ci_docs.yml  gh_pages.yml  pre-commit.yml  python-publish-test.yml  python-publish.yml  test_pypi_publish.yml
API/: core.html  index.html  simulation.html  simulation_api.html  types.html  utilities.html  windfarm.html
_modules/: index.html
_modules/wombat/core/: data_classes.html  environment.html  port.html  post_processor.html  repair_management.html  service_equipment.html  simulation_api.html
_modules/wombat/utilities/: logging.html  plot.html  time.html  utilities.html
_modules/wombat/windfarm/: windfarm.html
_modules/wombat/windfarm/system/: cable.html  subassembly.html  system.html
_sources/: contributing.md  index.rst.txt  install.md  presentations.rst.txt  team.md
_sources/API/: index.md  simulation_api.md  types.md  utilities.md
_sources/examples/: examples_reference.md  index.rst.txt  metrics_demonstration.md  strategy_demonstration.md
docs/: _config.yml  _toc.yml  changelog.md  contributing.md  index.md  index.rst  install.md  presentations.md  refs.bib  team.md
docs/API/: core.md  simulation_api.md  types.md  utilities.md  windfarm.md
docs/examples/: default_data_demonstration.md  examples_reference.md  how_to.md  index.md  metrics_demonstration.md  strategy_demonstration.md
docs/images/: data_classes.mmd  package_hierarchy.mmd
docs/jupyter_execute/examples/: how_to.ipynb  how_to.py  how_to.txt  metrics_demonstration.ipynb  metrics_demonstration.py  metrics_demonstration_test.ipynb  strategy_demonstration.ipynb  strategy_demonstration.py
docs/site/: 404.html  index.html  search.html  sitemap.xml
docs/site/search/: search_index.json
docs/source/: conf.py  index.rst  install.md  presentations.md
docs/source/API/: core.md  index.md  simulation.md  simulation_api.md  types.md  utilities.md  windfarm.md
docs/source/examples/: examples_reference.md  how_to.md  index.md  index.rst  metrics_demonstration.ipynb  metrics_demonstration.md  metrics_demonstration_test.md  strategy_demonstration.ipynb  strategy_demonstration.md
docs/source/images/: class_diagram.md  class_diagram.mmd  crew_transfer.mmd  data_classes.mmd  repair_diagram.mmd  simulation_api.mmd  simulation_tools.mmd
docs/source/workshops/: index.md  nawea_wind_tech_2023.md
docs/workshops/: index.md
examples/: COWER-2025-prelim-results.ipynb  COWER-2025-results.ipynb  COWER_om_workflow.ipynb  NAWEA_interactive_walkthrough.ipynb  WOMBAT_baselines.xlsx  avanessova_2025.ipynb  default_data_demonstration.ipynb  dinwoodie_validation-Copy1.ipynb  dinwoodie_validation.ipynb  dinwoodie_validation_100pct_operation_reduction.ipynb  electrolyzer_example.ipynb  examples_reference.html  how_to.html  how_to.ipynb  iea_26_validation-Copy1.ipynb  iea_26_validation.ipynb  index.html  metrics_demonstration.html  metrics_demonstration.ipynb  run_baselines.py  strategy_demonstration.html  strategy_demonstration.ipynb  test_refs.ipynb  timing_benchmarks.ipynb
examples/archival/: doe_analyses.ipynb
presentation_material/: README.rst
tests/: conftest.py  delete.py  test_cable.py  test_data_classes.py  test_environment.py  test_library.py  test_post_processor.py  test_repair_manager.py  test_service_equipment.py  test_simulation_api.py  test_subassembly.py  test_system.py  test_utilities.py  test_windfarm.py
tests/regression/: test_cable_timing.py  test_environment_timing.py  test_equipment_timing.py  test_results.py  test_subassembly_timing.py
tests/unit/: test_cable.py  test_data_classes.py  test_environment.py  test_library.py  test_post_processor.py  test_repair_manager.py  test_service_equipment.py  test_simulation_api.py  test_subassembly.py  test_system.py  test_utilities.py  test_windfarm.py
wombat/: __init__.py  __main__.py
wombat/core/: __init__.py  data_classes.py  environment.py  library.py  mixins.py  port.py  post_processor.py  repair_management.py  service_equipment.py  simulation_api.py
wombat/tests/: conftest.py  test_library.py  test_utilities.py
wombat/utilities/: __init__.py  exceptions.py  logging.py  plot.py  time.py  utilities.py
wombat/windfarm/: __init__.py  windfarm.py
wombat/windfarm/system/: __init__.py  cable.py  mooring.py  subassembly.py  system.py
workshops/: index.html  nawea_wind_tech_2023.html
